// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "170b8008f53312",
  "0c1dc4c931d1c1",
  "16c7ef01b44f58",
  "0654a325ce10cc",
  "0bd5714f18016b",
  "0af1e7a22242ce",
  "024d4ea446736f",
  "00c4fbe3fb1ebf",
  "1c4e1deff875a4",
  "0ce488d40ca43a",
  "05132ab7403468",
  "0244c829bd10a9",
  "01809c2b9515e2",
  "16115904c7f919",
  "0cc4b8e853c93b",
  "1d8c8fa8cfab73",
  "19d409d40da594",
  "148b2c5c7d6820",
  "1873e5254e6a97",
  "0f5e70e4c3616f",
  "07a2ee6f249cf0",
  "155e8c3db4d986",
  "0a1b0f4bd8f20d",
  "02a776517f7993",
  "02bc4a933d961b",
  "0f49ee06c616ac",
  "1bed4557d114a8",
  "001ba8e50f59dd",
  "194a2e71e70378",
  "0d295f8cde502e",
  "03920e0fedbee8",
  "01703de21c696d",
  "0fc254e6fdeb8f",
  "15792c64fce15f",
  "14f6ce8d314281",
  "13ae7795edc2b8",
  "04c2907f5e9218",
  "01bf99e87db859",
  "05718000d347c5",
  "0d5409b01ad052",
  "1a7d34b72bca59",
  "1ba6487f9a7a2c",
  "1f3e659ac8ac58",
  "13397c33c037a1",
  "193b164639ff17",
  "0e9dc50a08d676",
  "0d55ae9acbb4a3",
  "10506717147790",
  "02f8a831845d72",
  "0535ec030bcd20",
  "1b73d70b51779d",
  "152e8d77477d2f",
  "0cc1d1184a1dae",
  "04e0636d5d2c0a",
  "13d00237d6f26f",
  "1a57ec58235732",
  "04a5499db48768",
  "06f80d0e2584a3",
  "1d6ee7649438a0",
  "0770d4b3998fcc",
  "1edbc38412b669",
  "07349ed86d5e73",
  "00a2d647a84dad",
  "052b2e3f1d7d89",
  "05938001e3c8d4",
  "03f24e53364473",
  "10891a54b8069d",
  "071f7933f3e32b",
  "1488ef13c2ba05",
  "1eb31bc64ebbf0",
  "0e91560f6f4424",
  "15aa7610e6cf0b",
  "17d1b98b596f45",
  "145148828b5e16",
  "141bb9cc00e548",
  "0a30e8e8651f6b",
  "1f5b17893f646c",
  "12bc1fcb5e6191",
  "076572e8a6469d",
  "0fcdc95aa9bd84",
  "0ac67cc2f5d91e",
  "0c3d008e99e962",
  "0a1dc8a1f9c2bc",
  "094f7b7be2a526",
  "09343c2c74b246",
  "00d11a0611e188",
  "1014c8ad737401",
  "08e47809c3bd1a",
  "169e292fa393dd",
  "0b11d7a71355eb",
  "07f1cbf07b2f2d",
  "06fc74351c4400",
  "0f16afb3799454",
  "11738969c907ca",
  "1b8f37f2a9093b",
  "1e68f3ba53f571",
  "0485c50b93f58a",
  "0ec0685d96c2d2",
  "1421d152456a3a",
  "1db233ba555e11",
  "15cdab26c21115",
  "1facedecbdb59f",
  "01842ff8b6213c",
  "0ab6dad976f4d6",
  "1703c21c77e591",
  "1bfae6003d0120",
  "19eb281c36a4ae",
  "0c90bed9da4f35",
  "19616e0c8366b1",
  "1e07425e0ceca5",
  "03adb629b9f6a2",
  "0801a3166655dd",
  "1469df7798eb23",
  "08859f7e73dac4",
  "1a09d5b629f133",
  "0eb2e981082292",
  "0a01f2da9097fa",
  "127831c33e9870",
  "1c70bb3aa82e07",
  "18fd4a54245bed",
  "0883dac6baf369",
  "13878151562c9b",
  "0a06cf6d82c32c",
  "1e0470956f76ed",
  "060fc875b43279",
  "05144d354aecb7",
  "0b386f5ca7a90b",
  "112ba7e758cd16",
  "0e2eb4f1bf33c0",
  "12caea8d959f38",
  "03dbf7be209bf9",
  "0b15bf2511df87",
  "174524a69127d3",
  "042cb9e8865bd4",
  "01e3f3379e2c81",
  "12021635a06afd",
  "1ecf81383ad840",
  "0de7ccc129761d",
  "1062c7227643cb",
  "1e1b9a02c20fb9",
  "056839e5bc5271",
  "1613db8560a78a",
  "0316d54d446aa8",
  "17289c66a62109",
  "1ebf9fcba8516c",
  "04fc87bcaf9ae2",
  "0f798ca95ae623",
  "02be43e84e6980",
  "117b2fb806f8e0",
  "025e74aacfac29",
  "04ae8aaa104adb",
  "13896210accf98",
  "1357a6a65fc1b1",
  "0d3089b4f0e681",
  "150482ee07be66",
  "0c2536c1434f80",
  "19198c737937c2",
  "1f76c94b1d47bb",
  "06c519926b92bd",
  "11d2c8fb928a4a",
  "00b5a4baa61ae8",
  "0bca2d44810edb",
  "1e4ca9d8b19100",
  "1c693992e04e99",
  "1e8fcaa7a6910c",
  "09e593d988e36c",
  "0ba009cf59ae9c",
  "12c73264adacc7",
  "19c757bc266904",
  "02a32c29aa40d8",
  "0f6da6475a9b00",
  "16f3554dab5f02",
  "198dd3c818e4a6",
  "07772d9e061cfa",
  "0337ecb57b98b1",
  "1f006300e023f5",
  "090dfd2b43d445",
  "025dc26c5fcfdc",
  "0807bbec8a25b9",
  "1b1961c4577aad",
  "1254d4b3e1774e",
  "0c6654e746cc3e",
  "0921de8d3bd587",
  "02f5487a4583fe",
  "0e47741b4cd9f2",
  "0526c3e248c604",
  "00f9fa180e3660",
  "05404ea99a8c96",
  "0012591797a2f2",
  "1335d1d52a2b76",
  "0120b2dd32442a",
  "00e1143cf8381c",
  "0047e7eb00747d",
  "10eb058a2ea5e1",
  "0702834a8d25b7",
  "0f87b0ac210899",
  "06208e82222479",
  "0108c1a93d3889",
  "034a5b1b9626f5",
  "0dd50e22fcd572",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "011e3784b6244b",
  "05650d09c80472",
  "09bb7b6b44a6f4",
  "1d54a658a6c9dc",
  "13a4596cefe1b0",
  "1de48df85fb3e9",
  "024d4ea446736f",
  "15e086a63ac0a6",
  "1c4e1deff875a4",
  "1fe6c973a4efb4",
  "162141e437de94",
  "001622b87364f7",
  "0454ec37cb69b5",
  "0e3b7df8db6da7",
  "1609195dbf320a",
  "1b089453084835",
  "19d409d40da594",
  "02717ab0a86321",
  "132f41736829c8",
  "0bde8979ee2f85",
  "12da942897714e",
  "1ce93ec9cd9d3d",
  "0a6cd1bafcf66c",
  "1a2f3d1d2832a5",
  "1ea7fa71f7f897",
  "1d0e7194e178ea",
  "157c53371bed28",
  "1fe2c4a83e8893",
  "04867d04e87cd1",
  "06fa1554d1b136",
  "12d872e2023618",
  "12cd73274b3c59",
  "1c0c003bf07f13",
  "10746ca67a47fb",
  "0a0b303d49bd69",
  "13ae7795edc2b8",
  "0066209dac1245",
  "0601462a3b59bc",
  "01f4fa00718c4d",
  "1ddd46ed7ca87a",
  "028505396a3830",
  "0b104211259da9",
  "01ff385cee5d14",
  "098bebd15f4c16",
  "0ab92f6f94f795",
  "02f1ee53c58237",
  "1d51c8401635a4",
  "10506717147790",
  "0b9fb0596b9c15",
  "1a8bdf81015c5b",
  "1fc2d5f9757cf5",
  "152e8d77477d2f",
  "139200cccbf0c3",
  "04e0636d5d2c0a",
  "13bd5ee554f21f",
  "02cacde3909378",
  "13fa413c0a0c53",
  "06f80d0e2584a3",
  "18c7c2b295f8d4",
  "138fe310ec173d",
  "0e8aec3090851d",
  "1d464ff13e4749",
  "070bab9f41a149",
  "052b2e3f1d7d89",
  "032b67c6704e85",
  "03f24e53364473",
  "185106d77f4635",
  "192b0109766691",
  "056569626d91d8",
  "15fb8cd1d28270",
  "05b05a65c5c3bd",
  "18b2ebe111b0b0",
  "0832bc1891481e",
  "0159e25046112e",
  "0d7cf88751f812",
  "10aa8d3013c5c5",
  "0dbac1e1e5d00e",
  "07d4ce7218b5e3",
  "11b4a0fc67568d",
  "1afcf2ee62a617",
  "03c1201cf9d20b",
  "0c3d008e99e962",
  "02ab7904558b3c",
  "0107617689c753",
  "135fa96a86ec14",
  "04b2cd82667710",
  "0d80fd3b2bf08e",
  "156b9615f6de54",
  "16cc04a8827f32",
  "1df78f327d55c7",
  "0f950ea1836dd3",
  "0f3e17083daa06",
  "080c6a9b0c01bc",
  "0e9e10c96bc1e9",
  "085b1a60301ea0",
  "157c427cb28ec8",
  "1e2b751144d6a3",
  "1e94425e6771c5",
  "1421d152456a3a",
  "0c42a5d000f468",
  "0458e5a1bb4790",
  "1fb1a94668bb22",
  "01842ff8b6213c",
  "06e8e5f4518ab1",
  "00ab87e6bfd815",
  "0b3ef80297a3a1",
  "054a2bf467369e",
  "0e6b095c5c3bce",
  "06ddb3ce632e8b",
  "1106ca0fc3a6aa",
  "150709dc5ffc51",
  "0801a3166655dd",
  "19182f08e7d4c5",
  "1b06c10fd069cf",
  "08edcce0dd4385",
  "1cb340c1159e36",
  "00008b9482c8a4",
  "1f378209e83279",
  "1d6795a5e87a35",
  "08f1126df556d5",
  "0883dac6baf369",
  "13d92157763150",
  "0a06cf6d82c32c",
  "1975fe3f0e8b97",
  "0ec0a3b494bb84",
  "0d8e352132ef0b",
  "110662c650e9e3",
  "0b82f299464775",
  "1d60e98e64cce7",
  "12caea8d959f38",
  "06c7895497a640",
  "1fc37e759e3a22",
  "01b92d270831fb",
  "14f404cf83bffc",
  "19d635afcf1064",
  "12021635a06afd",
  "0ebd01af21ce66",
  "16304b5a4a5162",
  "1429b8ba8a4fe9",
  "05e4770d9bb9ac",
  "056839e5bc5271",
  "1e27e042552371",
  "0316d54d446aa8",
  "013e425454dd4c",
  "0f0a21393d6879",
  "1d24e4b25e2b05",
  "0f798ca95ae623",
  "18c5f156a6c9df",
  "06a41ec9efaa55",
  "0cc7d542decb6e",
  "1d6ec92562bac9",
  "00791f60245386",
  "1aeb1a24049840",
  "0d6e868c78c2f0",
  "0e2166d7f66b36",
  "0490327e13629c",
  "014b927ef11857",
  "1b3ae74c17b872",
  "045f642a855432",
  "020b17d96d0edb",
  "1ceccc98074671",
  "1769a2773c0003",
  "1422f160ecb2ad",
  "0e2ccf25b35e30",
  "1e8fcaa7a6910c",
  "040a4e4f024ead",
  "0ba009cf59ae9c",
  "0d8376b74a285a",
  "10d71f05e2a8cf",
  "1eeee4a748ebf4",
  "0f6da6475a9b00",
  "1280702bf87bde",
  "0ab7059d4eb0a0",
  "1d5fb51c55699a",
  "0e0256d26c9dfc",
  "0670c18661082c",
  "19765d799fd7aa",
  "04cc64c806454a",
  "0807bbec8a25b9",
  "0b3068369a9605",
  "0b1e0457f48d4c",
  "0c6654e746cc3e",
  "0921de8d3bd587",
  "0960914e5bcb77",
  "1aaf411b421dab",
  "150898c71a1a97",
  "1c295617e904b9",
  "0ca5a4cb7c5bb4",
  "0ab0b4ef9e9766",
  "1af6153285bfe6",
  "19c94adc45f7b1",
  "0b5dab69178e0b",
  "1e89f743d9ac93",
  "168be1da18953d",
  "06dc1edff14c9c",
  "0f87b0ac210899",
  "100d2ea572ab5b",
  "051cb9dda50b97",
  "0b864790797f5f",
  "17fda2c672d06a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "170b8008f53312",
  "05650d09c80472",
  "16c7ef01b44f58",
  "0654a325ce10cc",
  "0bd5714f18016b",
  "0af1e7a22242ce",
  "024d4ea446736f",
  "00c4fbe3fb1ebf",
  "1c4e1deff875a4",
  "1fe6c973a4efb4",
  "162141e437de94",
  "0244c829bd10a9",
  "01809c2b9515e2",
  "16115904c7f919",
  "0cc4b8e853c93b",
  "1d8c8fa8cfab73",
  "19d409d40da594",
  "148b2c5c7d6820",
  "1873e5254e6a97",
  "0f5e70e4c3616f",
  "07a2ee6f249cf0",
  "1ce93ec9cd9d3d",
  "0a1b0f4bd8f20d",
  "1a2f3d1d2832a5",
  "02bc4a933d961b",
  "0f49ee06c616ac",
  "1bed4557d114a8",
  "001ba8e50f59dd",
  "194a2e71e70378",
  "06fa1554d1b136",
  "03920e0fedbee8",
  "01703de21c696d",
  "0fc254e6fdeb8f",
  "15792c64fce15f",
  "14f6ce8d314281",
  "13ae7795edc2b8",
  "04c2907f5e9218",
  "0601462a3b59bc",
  "05718000d347c5",
  "0d5409b01ad052",
  "1a7d34b72bca59",
  "1ba6487f9a7a2c",
  "1f3e659ac8ac58",
  "13397c33c037a1",
  "0ab92f6f94f795",
  "0e9dc50a08d676",
  "0d55ae9acbb4a3",
  "10506717147790",
  "02f8a831845d72",
  "1a8bdf81015c5b",
  "1b73d70b51779d",
  "152e8d77477d2f",
  "0cc1d1184a1dae",
  "04e0636d5d2c0a",
  "13d00237d6f26f",
  "1a57ec58235732",
  "04a5499db48768",
  "06f80d0e2584a3",
  "1d6ee7649438a0",
  "138fe310ec173d",
  "1edbc38412b669",
  "07349ed86d5e73",
  "00a2d647a84dad",
  "052b2e3f1d7d89",
  "05938001e3c8d4",
  "03f24e53364473",
  "10891a54b8069d",
  "071f7933f3e32b",
  "056569626d91d8",
  "1eb31bc64ebbf0",
  "0e91560f6f4424",
  "15aa7610e6cf0b",
  "17d1b98b596f45",
  "145148828b5e16",
  "141bb9cc00e548",
  "0a30e8e8651f6b",
  "1f5b17893f646c",
  "12bc1fcb5e6191",
  "11b4a0fc67568d",
  "0fcdc95aa9bd84",
  "0ac67cc2f5d91e",
  "0c3d008e99e962",
  "0a1dc8a1f9c2bc",
  "094f7b7be2a526",
  "09343c2c74b246",
  "00d11a0611e188",
  "1014c8ad737401",
  "08e47809c3bd1a",
  "169e292fa393dd",
  "0b11d7a71355eb",
  "07f1cbf07b2f2d",
  "0f3e17083daa06",
  "0f16afb3799454",
  "0e9e10c96bc1e9",
  "085b1a60301ea0",
  "157c427cb28ec8",
  "1e2b751144d6a3",
  "0ec0685d96c2d2",
  "1421d152456a3a",
  "1db233ba555e11",
  "15cdab26c21115",
  "1facedecbdb59f",
  "01842ff8b6213c",
  "06e8e5f4518ab1",
  "1703c21c77e591",
  "0b3ef80297a3a1",
  "19eb281c36a4ae",
  "0c90bed9da4f35",
  "19616e0c8366b1",
  "1106ca0fc3a6aa",
  "150709dc5ffc51",
  "0801a3166655dd",
  "19182f08e7d4c5",
  "08859f7e73dac4",
  "1a09d5b629f133",
  "0eb2e981082292",
  "0a01f2da9097fa",
  "1f378209e83279",
  "1c70bb3aa82e07",
  "18fd4a54245bed",
  "0883dac6baf369",
  "13878151562c9b",
  "0a06cf6d82c32c",
  "1e0470956f76ed",
  "060fc875b43279",
  "05144d354aecb7",
  "0b386f5ca7a90b",
  "112ba7e758cd16",
  "1d60e98e64cce7",
  "12caea8d959f38",
  "03dbf7be209bf9",
  "0b15bf2511df87",
  "174524a69127d3",
  "14f404cf83bffc",
  "01e3f3379e2c81",
  "12021635a06afd",
  "1ecf81383ad840",
  "0de7ccc129761d",
  "1429b8ba8a4fe9",
  "05e4770d9bb9ac",
  "056839e5bc5271",
  "1613db8560a78a",
  "0316d54d446aa8",
  "013e425454dd4c",
  "1ebf9fcba8516c",
  "04fc87bcaf9ae2",
  "0f798ca95ae623",
  "02be43e84e6980",
  "117b2fb806f8e0",
  "025e74aacfac29",
  "04ae8aaa104adb",
  "13896210accf98",
  "1357a6a65fc1b1",
  "0d3089b4f0e681",
  "0e2166d7f66b36",
  "0c2536c1434f80",
  "19198c737937c2",
  "1b3ae74c17b872",
  "045f642a855432",
  "020b17d96d0edb",
  "00b5a4baa61ae8",
  "0bca2d44810edb",
  "1422f160ecb2ad",
  "1c693992e04e99",
  "1e8fcaa7a6910c",
  "09e593d988e36c",
  "0ba009cf59ae9c",
  "12c73264adacc7",
  "19c757bc266904",
  "02a32c29aa40d8",
  "0f6da6475a9b00",
  "16f3554dab5f02",
  "198dd3c818e4a6",
  "07772d9e061cfa",
  "0337ecb57b98b1",
  "1f006300e023f5",
  "090dfd2b43d445",
  "04cc64c806454a",
  "0807bbec8a25b9",
  "0b3068369a9605",
  "1254d4b3e1774e",
  "0c6654e746cc3e",
  "0921de8d3bd587",
  "02f5487a4583fe",
  "0e47741b4cd9f2",
  "150898c71a1a97",
  "00f9fa180e3660",
  "0ca5a4cb7c5bb4",
  "0012591797a2f2",
  "1335d1d52a2b76",
  "0120b2dd32442a",
  "00e1143cf8381c",
  "0047e7eb00747d",
  "10eb058a2ea5e1",
  "0702834a8d25b7",
  "0f87b0ac210899",
  "06208e82222479",
  "0108c1a93d3889",
  "034a5b1b9626f5",
  "0dd50e22fcd572",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "10eb3c09cabc13",
  "16c3cd66a6a8af",
  "122ef07f017a61",
  "0f99dde49510c9",
  "1433d9ad38e4b7",
  "0a377e1746c58b",
  "00be2802328301",
  "1e0a062719a61d",
  "15a0e0e9728843",
  "00366436ec1bed",
  "0e00a7b5db218c",
  "0255e6d615fbac",
  "08fd38984e2bae",
  "0e21979ee35b08",
  "1c871aa2ea7410",
  "022285a8a95215",
  "0f286e30120af8",
  "12c82156201f3a",
  "1918ee07067e33",
  "149af5e298c682",
  "1394867b566b6d",
  "1391e35b86ee8a",
  "1056b13fec7ce8",
  "0967d0b4f3b020",
  "01c12a560bf792",
  "0f7b17f3b0d6e3",
  "0321f8abd71a15",
  "036660254f5551",
  "163769db13794e",
  "0d71b4b79f9c50",
  "163e7644fd6059",
  "1659926a92e2f4",
  "17f0f8fcb1ea65",
  "1adeba28deda89",
  "0019c466aac89b",
  "12d2576fc6c674",
  "19339e7860e857",
  "1094fbc7edd1bb",
  "1cfa11ceaa0f78",
  "1c3656cf690355",
  "1a1bbe28f85f80",
  "05627e527b7a92",
  "0b0742d4368980",
  "12ddb45e75de8a",
  "021913e125f0fa",
  "11c0dca9346806",
  "183afda4395b1f",
  "1ac6e47700faa4",
  "0a982e55b22339",
  "04f05453884b53",
  "05d62ebb1e713c",
  "11a20e207f4d55",
  "104bcd7b005015",
  "14cc22b7119daf",
  "1d0dbcac926bfc",
  "082601f91c7c35",
  "1afa774098ad27",
  "1495a3bd61a362",
  "18e7ae4793cdf9",
  "1510f2e088e796",
  "115576f4c28b47",
  "101f5a0f67270b",
  "00c05cfa67a3df",
  "072467663be32b",
  "1effff9958c5d3",
  "17510d708c1fd7",
  "1eaa3c83d6b036",
  "083d315e3d63cd",
  "0acf2cd7ba4ec8",
  "1a90e81ea1e3b1",
  "0311c724ea3b7c",
  "0a4d2a4b1ada36",
  "185deef2c118e8",
  "1a7ab02c5a27f1",
  "0b97c8e5192459",
  "107c928334d321",
  "1af2c608fbb68e",
  "0c7fdc254b1fee",
  "1c14a3cf1c8711",
  "17c44af58b673e",
  "189f816d38cfb8",
  "1902ba9ebc46d4",
  "042f99e1b9b4ad",
  "1f204cdc27dead",
  "17be755321874c",
  "1140cddcd4248a",
  "184dc0f427dc1f",
  "05c05430dc98d8",
  "11abc576a91418",
  "134970fb8f4412",
  "1ec0a0d3c25b67",
  "03f96e23bc9b64",
  "0589fadc94ba83",
  "1f454b6aad0c05",
  "16acf649eec551",
  "1ff3eccebb9a0e",
  "074045f42b3954",
  "00abc3ff909db1",
  "1f752b96cc45cb",
  "0dc1ce358d3cd9",
  "019656db0de395",
  "10d1cb25d6a500",
  "0aa9f25ca7cfa9",
  "0048a162ac6efc",
  "199a30e4d9d68c",
  "1722359825d725",
  "13226bedd9821c",
  "0711bc349de169",
  "06922468f0b829",
  "0b5af3a80c9b83",
  "1276155b1c16e8",
  "0bf4865b13c013",
  "0244268ea4e761",
  "0de0221e4090a3",
  "0be28babf7c38e",
  "103a5b8b25d035",
  "087f4ea643eb50",
  "00eed92f6c7136",
  "14935fb2807bc7",
  "1f88a5559fe27e",
  "19a7b3559ff273",
  "0f0a884e8bd697",
  "1e6d91de688b7f",
  "19aa3474fe8b7b",
  "047ca5b9bb33f6",
  "1dacc276fdf150",
  "14c6bac8c64b8e",
  "106d275847c15e",
  "0c06561a2b7052",
  "199906fda85e37",
  "150c00313a211f",
  "0cbd45492a93f0",
  "14171c0456beb2",
  "0ae89d50154bbc",
  "100f8690f155ee",
  "1075382578095a",
  "0feb03a0412172",
  "06ef0d5b80af07",
  "016de13ad5d3cc",
  "0c86bd6b35b6b1",
  "01bfac6e08626d",
  "04a013fb7a3423",
  "1d02e174f08200",
  "1e6cf4e51b985e",
  "1d586f10a9c422",
  "18e27ba040314b",
  "132aa0b62a1384",
  "100963f79e5c31",
  "1f503c9816a9cd",
  "1f674be59c7370",
  "1efe005db9b830",
  "179eeef72315ed",
  "06ae5d29b4539b",
  "11f61c350bd93d",
  "075ef513b8964d",
  "1d15fc632ff03f",
  "104bfb968a9157",
  "04a853a80ec580",
  "1a74fb75f9754e",
  "0db380ad11dcb6",
  "141f353bc19988",
  "01a2485ee0f3ca",
  "0169175734281e",
  "179849423251b2",
  "00d127082e092a",
  "084ff4d277c0c3",
  "19c0962fe3c83f",
  "1f9f49ca7c8801",
  "1c7d9ef68dea30",
  "076d5d41de6630",
  "0162bca4fd74ba",
  "1a41fe0377a96e",
  "170f55284c50b1",
  "1bd01a4d90923c",
  "132f50945709df",
  "1d6cd2e92c3d1a",
  "149b10c8a8e0e0",
  "0a41e790fcef07",
  "0fddec53f8f064",
  "12032adb5304bf",
  "1a9db0eef033c8",
  "0e0b4a0c395e18",
  "080b7f070d0ad6",
  "1e5db06f9b1d98",
  "0d644fab597344",
  "110fd6eda61796",
  "011f2c4e8c2cd0",
  "0196525fdedc01",
  "15d7dc589c6d45",
  "0e4020e1bcec03",
  "15dad251dba4fb",
  "1113544dd79674",
  "0ac770c9aa815e",
  "1576533989bd5d",
  "09344c3f4ad9b1",
  "1aeca61ce89d2c",
  "14ea14b540d7d9",
  "030e49f59cc711",
  "05db63781a5ea5",
  "0eeb73ac8e6a39",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "0f9cafd7ddee42",
  "11c6243b0b8abd",
  "010e9017bce5bf",
  "07facc3e7ce21d",
  "18778ab9fd4d8e",
  "1384bcbf5fd69d",
  "00be2802328301",
  "1ce9517396f467",
  "15a0e0e9728843",
  "109d96622dfea8",
  "1c9014df41282e",
  "08cacf097bdbec",
  "0216f9615449ed",
  "1a4073dd068f71",
  "068b6261312177",
  "16451c06cc0835",
  "0f286e30120af8",
  "08fbd5b96db36c",
  "0400770cc8887d",
  "1b769c52feeaf9",
  "014e734d4267c6",
  "1fea3f07be3fb6",
  "159b63a07110e9",
  "10ff192cc8b01d",
  "1ec012fe5e41e1",
  "06cb467c8ef284",
  "18dc9afce65d9a",
  "1ae89bf36394b5",
  "0ba503ca0d0eec",
  "01c055239f9afa",
  "15f0385844696f",
  "10d26e548c588c",
  "0c28b6f1f5ddc2",
  "0fe7eecc519341",
  "192477b84338ca",
  "12d2576fc6c674",
  "096472b7f09ce3",
  "06f1402d2a980e",
  "0a804c4c1d9860",
  "0112a73b7958f7",
  "130a05fff54bcc",
  "06def99fd7a539",
  "197747f2b8282d",
  "12a7127c0c1d16",
  "0bbe27ca4d22c3",
  "09a1e19815f7ce",
  "1eee9e011dc679",
  "1ac6e47700faa4",
  "1ec176bde8f3ff",
  "1c67a74260da33",
  "05bd95a0299d3c",
  "11a20e207f4d55",
  "0707ad277d4bff",
  "14cc22b7119daf",
  "02e619a419f62d",
  "0bd7ebae6915a4",
  "1f271595fc5562",
  "1495a3bd61a362",
  "17330a2bc06899",
  "1f1e08e1075ef3",
  "0267715398403c",
  "09ccf635977b0c",
  "1f6747741f6fe4",
  "072467663be32b",
  "145053b5878f16",
  "17510d708c1fd7",
  "0a8d0f15bbd5c8",
  "0c6df6889f5c40",
  "05a816a0a76620",
  "0508e93644e67c",
  "1e7d10e28c0816",
  "02b3d54f1fa93b",
  "085252f37a8a21",
  "18e54966258341",
  "01a454bc2d0d60",
  "151f8a5842e796",
  "03e2d0b37650d0",
  "1a1e8ea31b8bfa",
  "0046832b09a743",
  "146edba1111d86",
  "1b781d3e3bdb57",
  "1902ba9ebc46d4",
  "05cb70161ab4bf",
  "076eee565e27a7",
  "17a44a97831229",
  "1f05844978503a",
  "1aa70dc092e47b",
  "0cc332bb429e13",
  "0bd79ef95304f4",
  "05c3572b5a7b5d",
  "1aa492c20f0bfc",
  "11db45e279a591",
  "03a532f3e07469",
  "10b5bb44333886",
  "0f8730297335cf",
  "0febac18619507",
  "1a7cb6949f4c4d",
  "11b55b7ee2b309",
  "1f752b96cc45cb",
  "02991b398a395c",
  "1913137ea59c76",
  "157eeb266aa31a",
  "0aa9f25ca7cfa9",
  "15e73ef580acc0",
  "1c3f1ed47a77a3",
  "0317f9b6e9ee28",
  "1fb6d6b0218151",
  "13b57bd7e074f9",
  "11638573e6c3d2",
  "1606f33ec7ce6a",
  "15865177828ee3",
  "0bf4865b13c013",
  "187166113dc2df",
  "1caeca3bca5160",
  "062b72baf39724",
  "00c7986343283c",
  "0f4c0a5f67465e",
  "05960b49e27ad9",
  "1f714db1b09a6d",
  "0f22687804c1ad",
  "19a7b3559ff273",
  "1b2dc9c1d88561",
  "1e6d91de688b7f",
  "05521847f1a444",
  "0f365016f041de",
  "0efa35d3eeec9b",
  "1311c79c7e4cb8",
  "068dd89bd6eeff",
  "155d2fe588ad57",
  "199906fda85e37",
  "1ebd9528541a55",
  "17f6fa38976fca",
  "04fbc8698a56e8",
  "0094d7b227394e",
  "0e06da58129f99",
  "1075382578095a",
  "18e51a1391b0cd",
  "0c30f3a3da251a",
  "01859b08389df5",
  "18b1f339965abe",
  "01bfac6e08626d",
  "1136428bcffa03",
  "1d02e174f08200",
  "0cc304ccc4b13b",
  "1776906800815d",
  "1af5761af5edd8",
  "132aa0b62a1384",
  "0e563498c52a99",
  "172ad93609763e",
  "09da4704d9960a",
  "167292d5acbe90",
  "09b0ea734b1bc8",
  "0d62fca8d719f8",
  "1577db8f87d724",
  "06a9f63dade2c6",
  "093e71e817b073",
  "12477f20d56486",
  "1026a9a53db250",
  "10e4b28a498196",
  "0f2952f4bacfa3",
  "1ef1acc97fb3fd",
  "1cc3879cf5abab",
  "0bd9375426f822",
  "029f9dbfa62cb7",
  "00d127082e092a",
  "06fc802b1c3802",
  "19c0962fe3c83f",
  "06b1af93d16cb5",
  "006e293f143bd9",
  "10cc5f511a0bd6",
  "0162bca4fd74ba",
  "07e1ad21c30acb",
  "08bbb907b9bcfe",
  "16bb735feb6ee8",
  "1dd33931572d62",
  "13559359833340",
  "06db917ce510ea",
  "00d2822762b699",
  "0fddec53f8f064",
  "1706c2a88ca2b6",
  "08a663f433aee1",
  "0e0b4a0c395e18",
  "080b7f070d0ad6",
  "1a341bca3f7f98",
  "0516e38ce785a2",
  "002be1730e33f1",
  "022ded8ff7279f",
  "146011d0d5c9d7",
  "18164bf70adfa9",
  "10566065489fff",
  "16eafbac2c09d7",
  "07db7afde16b65",
  "0aa0eb787d22e7",
  "191ffdd46147ce",
  "002d4bcccada6b",
  "1aeca61ce89d2c",
  "083674112e367d",
  "1b8496b2d4c05a",
  "10799552f53415",
  "16065dd07fd1d7",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "10eb3c09cabc13",
  "11c6243b0b8abd",
  "122ef07f017a61",
  "0f99dde49510c9",
  "1433d9ad38e4b7",
  "0a377e1746c58b",
  "00be2802328301",
  "1e0a062719a61d",
  "15a0e0e9728843",
  "109d96622dfea8",
  "1c9014df41282e",
  "0255e6d615fbac",
  "08fd38984e2bae",
  "0e21979ee35b08",
  "1c871aa2ea7410",
  "022285a8a95215",
  "0f286e30120af8",
  "12c82156201f3a",
  "1918ee07067e33",
  "149af5e298c682",
  "1394867b566b6d",
  "1fea3f07be3fb6",
  "1056b13fec7ce8",
  "10ff192cc8b01d",
  "01c12a560bf792",
  "0f7b17f3b0d6e3",
  "0321f8abd71a15",
  "036660254f5551",
  "163769db13794e",
  "01c055239f9afa",
  "163e7644fd6059",
  "1659926a92e2f4",
  "17f0f8fcb1ea65",
  "1adeba28deda89",
  "0019c466aac89b",
  "12d2576fc6c674",
  "19339e7860e857",
  "06f1402d2a980e",
  "1cfa11ceaa0f78",
  "1c3656cf690355",
  "1a1bbe28f85f80",
  "05627e527b7a92",
  "0b0742d4368980",
  "12ddb45e75de8a",
  "0bbe27ca4d22c3",
  "11c0dca9346806",
  "183afda4395b1f",
  "1ac6e47700faa4",
  "0a982e55b22339",
  "1c67a74260da33",
  "05d62ebb1e713c",
  "11a20e207f4d55",
  "104bcd7b005015",
  "14cc22b7119daf",
  "1d0dbcac926bfc",
  "082601f91c7c35",
  "1afa774098ad27",
  "1495a3bd61a362",
  "18e7ae4793cdf9",
  "1f1e08e1075ef3",
  "115576f4c28b47",
  "101f5a0f67270b",
  "00c05cfa67a3df",
  "072467663be32b",
  "1effff9958c5d3",
  "17510d708c1fd7",
  "1eaa3c83d6b036",
  "083d315e3d63cd",
  "05a816a0a76620",
  "1a90e81ea1e3b1",
  "0311c724ea3b7c",
  "0a4d2a4b1ada36",
  "185deef2c118e8",
  "1a7ab02c5a27f1",
  "0b97c8e5192459",
  "107c928334d321",
  "1af2c608fbb68e",
  "0c7fdc254b1fee",
  "0046832b09a743",
  "17c44af58b673e",
  "189f816d38cfb8",
  "1902ba9ebc46d4",
  "042f99e1b9b4ad",
  "1f204cdc27dead",
  "17be755321874c",
  "1140cddcd4248a",
  "184dc0f427dc1f",
  "05c05430dc98d8",
  "11abc576a91418",
  "134970fb8f4412",
  "1ec0a0d3c25b67",
  "11db45e279a591",
  "0589fadc94ba83",
  "10b5bb44333886",
  "0f8730297335cf",
  "0febac18619507",
  "1a7cb6949f4c4d",
  "00abc3ff909db1",
  "1f752b96cc45cb",
  "0dc1ce358d3cd9",
  "019656db0de395",
  "10d1cb25d6a500",
  "0aa9f25ca7cfa9",
  "15e73ef580acc0",
  "199a30e4d9d68c",
  "0317f9b6e9ee28",
  "13226bedd9821c",
  "0711bc349de169",
  "06922468f0b829",
  "1606f33ec7ce6a",
  "15865177828ee3",
  "0bf4865b13c013",
  "187166113dc2df",
  "0de0221e4090a3",
  "0be28babf7c38e",
  "103a5b8b25d035",
  "087f4ea643eb50",
  "05960b49e27ad9",
  "14935fb2807bc7",
  "1f88a5559fe27e",
  "19a7b3559ff273",
  "0f0a884e8bd697",
  "1e6d91de688b7f",
  "19aa3474fe8b7b",
  "047ca5b9bb33f6",
  "1dacc276fdf150",
  "14c6bac8c64b8e",
  "106d275847c15e",
  "155d2fe588ad57",
  "199906fda85e37",
  "150c00313a211f",
  "0cbd45492a93f0",
  "14171c0456beb2",
  "0094d7b227394e",
  "100f8690f155ee",
  "1075382578095a",
  "0feb03a0412172",
  "06ef0d5b80af07",
  "01859b08389df5",
  "18b1f339965abe",
  "01bfac6e08626d",
  "04a013fb7a3423",
  "1d02e174f08200",
  "0cc304ccc4b13b",
  "1d586f10a9c422",
  "18e27ba040314b",
  "132aa0b62a1384",
  "100963f79e5c31",
  "1f503c9816a9cd",
  "1f674be59c7370",
  "1efe005db9b830",
  "179eeef72315ed",
  "06ae5d29b4539b",
  "11f61c350bd93d",
  "06a9f63dade2c6",
  "1d15fc632ff03f",
  "104bfb968a9157",
  "1026a9a53db250",
  "10e4b28a498196",
  "0f2952f4bacfa3",
  "141f353bc19988",
  "01a2485ee0f3ca",
  "0bd9375426f822",
  "179849423251b2",
  "00d127082e092a",
  "084ff4d277c0c3",
  "19c0962fe3c83f",
  "1f9f49ca7c8801",
  "1c7d9ef68dea30",
  "076d5d41de6630",
  "0162bca4fd74ba",
  "1a41fe0377a96e",
  "170f55284c50b1",
  "1bd01a4d90923c",
  "132f50945709df",
  "1d6cd2e92c3d1a",
  "149b10c8a8e0e0",
  "00d2822762b699",
  "0fddec53f8f064",
  "1706c2a88ca2b6",
  "1a9db0eef033c8",
  "0e0b4a0c395e18",
  "080b7f070d0ad6",
  "1e5db06f9b1d98",
  "0d644fab597344",
  "002be1730e33f1",
  "011f2c4e8c2cd0",
  "146011d0d5c9d7",
  "15d7dc589c6d45",
  "0e4020e1bcec03",
  "15dad251dba4fb",
  "1113544dd79674",
  "0ac770c9aa815e",
  "1576533989bd5d",
  "09344c3f4ad9b1",
  "1aeca61ce89d2c",
  "14ea14b540d7d9",
  "030e49f59cc711",
  "05db63781a5ea5",
  "0eeb73ac8e6a39",
]
`;
